[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/PlantPreferenceUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ScannerHolo.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/no_plant_group.webp" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Fonts/Anita semi square.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=8]
size = 57
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlantPreferenceUI1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "x"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlantPreferenceUI1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 406, 80 ), Vector2( 0, 0 ) ]
}

[node name="ScannerHolo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 2.5

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 616.0

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 8 )
text = "Needs met:"
align = 1

[node name="SoilInfo" type="HBoxContainer" parent="AspectRatioContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 1280.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlantPreferenceUI1" type="TextureRect" parent="AspectRatioContainer/VBoxContainer/SoilInfo"]
unique_name_in_owner = true
visible = false
margin_right = 252.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlantPreferenceUI2" type="TextureRect" parent="AspectRatioContainer/VBoxContainer/SoilInfo"]
unique_name_in_owner = true
visible = false
margin_right = 317.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlantPreferenceUI3" type="TextureRect" parent="AspectRatioContainer/VBoxContainer/SoilInfo"]
unique_name_in_owner = true
visible = false
margin_right = 424.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlantPreferenceUI4" type="TextureRect" parent="AspectRatioContainer/VBoxContainer/SoilInfo"]
unique_name_in_owner = true
visible = false
margin_right = 638.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlantPreferenceUI5" type="TextureRect" parent="AspectRatioContainer/VBoxContainer/SoilInfo"]
unique_name_in_owner = true
visible = false
margin_right = 1280.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlantPreferenceUI1" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 252.0
margin_bottom = 443.0
texture = ExtResource( 3 )
script = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "x"
anims/RESET = SubResource( 9 )
anims/x = SubResource( 10 )
